Move pages into /work directory to avoid subdirectory collisions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="Interaction designer" name="description">
     <title>Chris Lee</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold,italic|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -24,19 +24,19 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/snappy/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/snappy/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Snappy</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="snappy/thumb.png" alt="Snappy" />
+          <img src="/work/snappy/thumb.png" alt="Snappy" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="/thegospel/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/gospel/" class="info"><div class="icon"></div>Info</a>
               <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -44,7 +44,7 @@
             <h1>The Gospel</h1>
             <p class="type">Website</p>
           </div>
-          <img src="thegospel/thumb.png" alt="The Gospel" />
+          <img src="/work/gospel/thumb.png" alt="The Gospel" />
         </div>
         <div class="item">
           <div class="cover">
@@ -57,12 +57,12 @@
             <h1>Design for Programmers</h1>
             <p class="type">Presentation</p>
           </div>
-          <img src="designforprogrammers/thumb.png" alt="Design for Programmers" />
+          <img src="/work/designforprogrammers/thumb.png" alt="Design for Programmers" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="/coursel/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/coursel/" class="info"><div class="icon"></div>Info</a>
               <a href="http://coursel.net/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -70,24 +70,24 @@
             <h1>Coursel</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="coursel/thumb.png" alt="Coursel" />
+          <img src="/work/coursel/thumb.png" alt="Coursel" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/grapevin/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/grapevin/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Grapevin</h1>
             <p class="type">Web app</p>
           </div>
-          <img src="grapevin/thumb.png" alt="Grapevin" />
+          <img src="/work/grapevin/thumb.png" alt="Grapevin" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="/stik/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/stik/" class="info"><div class="icon"></div>Info</a>
               <a href="http://www.stik.com/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -95,38 +95,38 @@
             <h1>Stik.com</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="stik/thumb.png" alt="Stik" />
+          <img src="/work/stik/thumb.png" alt="Stik" />
         </div>
       </div>
       <div id="secondary">
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/vote4/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/vote4/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Vote 4</h1>
             <p class="type">Mobile App</p>
           </div>
-          <img src="vote4/thumb.png" alt="Vote 4" />
+          <img src="/work/vote4/thumb.png" alt="Vote 4" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/bonsai/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/bonsai/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Bonsai</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="bonsai/thumb.png" alt="Bonsai" />
+          <img src="/work/bonsai/thumb.png" alt="Bonsai" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="/acf/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/acf/" class="info"><div class="icon"></div>Info</a>
               <a href="http://acfpcc.org/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -134,67 +134,67 @@
             <h1>ACF</h1>
             <p class="type">Website</p>
           </div>
-          <img src="acf/thumb.png" alt="Asian Christian Fellowship" />
+          <img src="/work/acf/thumb.png" alt="Asian Christian Fellowship" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/tripi/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/tripi/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Tripi</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="tripi/thumb.png" alt="Tripi" />
+          <img src="/work/tripi/thumb.png" alt="Tripi" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/shelf/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/shelf/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Shelf</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="shelf/thumb.png" alt="Shelf" />
+          <img src="/work/shelf/thumb.png" alt="Shelf" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/waypoint/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/waypoint/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Waypoint</h1>
             <p class="type">Device</p>
           </div>
-          <img src="waypoint/thumb.png" alt="Waypoint" />
+          <img src="/work/waypoint/thumb.png" alt="Waypoint" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/hcii/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/hcii/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>HCI Institute</h1>
             <p class="type">Website</p>
           </div>
-          <img src="hcii/thumb.png" alt="HCI Institute" />
+          <img src="/work/hcii/thumb.png" alt="HCI Institute" />
         </div>
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="/symphony/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/symphony/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
             <h1>Symphony</h1>
             <p class="type">Web App</p>
           </div>
-          <img src="symphony/thumb.png" alt="Symphony" />
+          <img src="/work/symphony/thumb.png" alt="Symphony" />
         </div>
       </div>
     </div>
@@ -205,7 +205,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
