--- a/work/acf/index.html
+++ b/work/acf/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Grapevin</title>
+    <title>Chris Lee | Asian Christian Fellowship</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,30 +22,27 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Grapevin</h1>
-          <p class="type">Web App</p>
+          <h1>Asian Christian Fellowship</h1>
+          <p class="type">Website</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Grapevin" class="bleed window" style="margin-right: -200px">
-          <p>Music tells a lot about a person.</p>
-          <p>That's my hypothesis: if a person's top ten current favorite songs probably tells a lot about their personality and their mood at that particular time.</p>
-          <p><strong>Grapevin</strong> was a project to allow people to express themselves through the music they enjoy. It allowed users to easily create an interactive playlist of their favorite songs to share with their friends. Grapevin was my first project of this scale; about a hundred people decided to check it out and created a playlist.</p>
-          <p>Unfortunately, although I had plenty of ideas on how to improve the application, I couldn't maintain it. After the rise of other social music services like Spotify and Rdio, I decided to cease development of Grapevin. Since then, I've been happy to see a services like <a href="http://www.thisismyjam.com/" target="_blank">This Is My Jam</a> and <a href="http://designers.mx/" target="_blank">Designers.MX</a> spring up that encapsulate lots of what I dreamt Grapevin might become.</p>
+          <a href="http://acfpcc.org/" title="Asian Christian Fellowship">
+            <img src="0.png" class="bleed window" alt="Asian Christian Fellowship" style="margin-right: -220px; width: 500px;">
+          </a>
+          <p>Asian Christian Fellowship is a student organization at Carnegie Mellon University.</p>
+          <p>This site was designed as a hub for the organization, where newcomers can find out more information about it and members can read about upcoming events.</p>
+
           <h2>Technology</h2>
-          <p>Grapevin was built on Ruby on Rails. In fact, I learned Rails as I was working on the application and developing it served as a much superior method of learning the framework than any tutorial I could find. It also served as an two-way encouragement: sometimes I would be learning Rails to develop Grapevin and at other times I'd be developing Grapevin to learn Rails.</p>
-          <p>When a user searched for a song to add, Grapevin used the <a href="http://www.last.fm/" target="_blank">Last.fm</a> API to grab matching songs and delivered results to the user. When the user picked one, the app then used <a href="http://grooveshark.com/" style="_blank">Grooveshark</a> API to find a related recording to embed on the user's profile page. This was one of the trickiest parts of the app: matching song data to the user's query and music then to that song data.</p>
-          <h2>Design</h2>
-          <p>One of my other philosophies about music is that album art is beautiful and a great complement to an auditory experience. So, I placed a great emphasis on album art in Grapevin, using them as a visual tiles representing music.</p>
-          <p>As a social application that began with no on-site community, Grapevin's key value was providing clean, interactive profile pages that could be shared elsewhere. I tried to make this easy, using Facebook and Twitter for login and placing one-click sharing buttons for these services inside the app. Every user was allowed to pick a custom username that would be used for a <code>http://grapev.in/username</code> URL.</p>
-          <p>Ultimately, I think Grapevin failed because it failed to provide an engaging on-site community where users could interact with one another. Given that it was my first large-scale web application and a solo project, though, I think it worked out well and I learned quite a bit from it.</p>
+          <p>The site uses CSS3 and web fonts to a great degree, with minimal images. I also constructed a Tumblr blog theme for the announcements page to match the static content.</p>
+
+          <h2>Process</h2>
+          <p>With the exception of some minor polishing, the entire design and code process took a day. I spent the day passing iterations back and forth with the fellowship director, who wrote the content for the site.</p>
           <h2>Roles</h2>
           <div id="roles">
-            <div class="role design">Ideation &amp; vision</div>
             <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
             <div class="role programming">Front-end development</div>
-            <div class="role programming">Back-end development</div>
           </div>
+          <a href="http://acfpcc.org/" class="deliverable">Visit the site</a>
         </div>
       </div>
     </div>
@@ -56,7 +53,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
