--- a/work/bonsai/index.html
+++ b/work/bonsai/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee</title>
+    <title>Chris Lee | Bonsai</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,29 +22,32 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Snappy</h1>
+          <h1>Bonsai</h1>
           <p class="type">Web App</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Snappy" class="bleed window" style="margin-right: -340px">
-          <p>Retro camera effects are hip. HTML5 is hip. So we combined them.</p>
-          <p>Apps like <a href="https://instagram.com/">Instagram</a> have repopularized classic camera effects, but these apps are typically limited to closed platforms like iOS and Android. So when the <a href="http://mozappshackday.eventbrite.com/" target="_blank">Mozilla Apps Hack Day 2012</a> challenged us to build open, cross-platforms web apps, a couple other Mozilla interns and I decided to build an <strong>Snappy</strong>, Instagram-inspired app. My teammates handled the graphics editing algorithms while I worked on the design and front-end of the app. We ended up completing the app in five hours and winning first place.</p>
-          <h2>Design</h2>
-          <p>Off the bat, I wanted to use arrange the photo-editing process as a few distinct steps to convey its simplicity. The layout went through many iterations, finally arriving at a main content area with a sidebar displaying the steps. The sidebar's color changes with each step to further demonstrate progress.</p>
-          <p>Fitting with the nature of a hackathon, I had to work around various technical limitations as they came up. For example, though we initially wanted to show each effect's result with a thumbnail preview, that feature ended up being infeasible, performance-wise, so I used a text-based list of tabs attached to the photo instead.</p>
-          <h2>Technology</h2>
-          <p>Snappy is a simple, client-side JavaScript app. I contributed to the code for front-end interactions, setting up events to trigger when the buttons were pressed or when the app moved to the next step.</p>
-          <p>During the hackathon, we didn't concentrate on code style much, so our code became one huge mess. After the fact, I organized and modularized it a bit. The code is <a href="https://github.com/cleercode/snappy" target="_blank">on GitHub</a>.</p>
+          <img src="0.png" alt="Bonsai" class="bleed window" style="margin-right: -240px">
+          <p>There are so many to-do list applications these days, but I haven't found one that really suits me.</p>
+          <p>My dream to-do list application has:</p>
+          <ul>
+            <li>Complete keyboard accessibility</li>
+            <li>Some sort of grouping functionality, allowing multiple separate lists</li>
+            <li>Due date support with smart interpretation of date strings ("Fri", "tom", "5/27", etc.) and sub-groups based around date ranges</li>
+            <li>Accessibility across devices</li>
+            <li>A simple, minimal interface that includes these things and not much else</li>
           </ul>
-          <h2>Team</h2>
-          <p><a href="http://paul.cx/" target="_blank">Paul Adenot</a>, Stephen Crane</p>
+          <p>I found the first three points (especially keyboard support!) pretty well-supported in <a href="http://www.potionfactory.com/thehitlist/" target="_blank">The Hit List</a>, the closest I've found to my ideal to-do list. But besides being costly, it's still overkill for my use. So I built my own to-do list as a web application.</p>
+          <h2>Technology</h2>
+          <p>Bonsai was built with <a href="http://backbonejs.org/" target="_blank">Backbone.js</a>, which allows task data to be easily bonded to the elements displayed on the page. I also took advantage of <a href="http://www.datejs.com/" target="_blank">Datejs</a>, a JavaScript libary for interpreting date strings.</p>
+          </ul>
           <h2>Roles</h2>
           <div id="roles">
+            <div class="role design">Ideation &amp; vision</div>
             <div class="role design">Visual design</div>
             <div class="role design">Interaction design</div>
             <div class="role programming">Front-end development</div>
+            <div class="role programming">Back-end development</div>
           </div>
-          <a href="https://github.com/cleercode/snappy" class="deliverable" target="_blank">Browse the source</a>
         </div>
       </div>
     </div>
@@ -55,7 +58,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
