--- a/work/designforprogrammers/index.html
+++ b/work/designforprogrammers/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Vote 4</title>
+    <title>Chris Lee | Design for Programmers</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,38 +22,33 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Vote 4</h1>
-          <p class="type">Mobile</p>
+          <h1>Design for Programmers</h1>
+          <p class="type">Presentation</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Vote 4 poll screen" class="bleed">
-          <p>Ever had trouble deciding where to eat with your friends?</p>
-          <p><strong>Vote 4</strong> is a mobile app concept designed to solve that problem. Inspired by my indecisive group of friends, I worked on Vote 4 with a couple classmates for an mobile interaction design project. Our target demographic was groups of teenagers and young adults who have trouble picking eating destinations due to differing tastes or lack of strong opinions.</p>
-          <h2>Research</h2>
-          <p>We consulted similar such Yelp, Urbanspoon, and Foodspotting and found that while helpful for a single user trying to find a restaurant, they did not solve the <strong>group coordination</strong> problem that we were targetting.</p>
-          <h2>Design</h2>
-          <p>I suggested the use of a four photo tiles as the main screen to make the app feel simple yet visually engaging from the start. I led a whiteboard wireframe construction session based on this idea and then refined the results into paper wireframes, then digital wireframes, and finally digital mockups produced in Photoshop. We then used Keynote to construct an animated demo.</p>
-          <h2>Team</h2>
-          <p><a href="http://christianreyes.com/" target="_blank">Christian Reyes</a>, Stephanie Yim</p>
+          <div class="hero">
+            <script async class="speakerdeck-embed" data-id="4f2df9465fd7de001f008eae" data-ratio="1.3333333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+          </div>
+          <p>Who says programmers can't design?</p>
+          <p>In the week leading up to the <a href="http://www.tartanhacks.com/">TartanHacks</a> hackathon at Carnegie Mellon, I delivered this presentation introducing web design concepts to an audience of hackathon participants, primarily computer science students.</p>
+          <p>Both the visuals and the content of the presentation were made from scratch and reflect some of the important lessons I've learned in the past years as I've explored the world of design.</p>
           <h2>Roles</h2>
           <div id="roles">
-            <div class="role design">Ideation</div>
-            <div class="role research">User research</div>
             <div class="role design">Visual design</div>
-            <div class="role design">Interaction design</div>
+            <div class="role writing">Content</div>
           </div>
-          <a href="presentation.pdf" class="deliverable" target="_blank">View the presentation</a>
+          <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="deliverable" target="_blank">View the presentation</a>
         </div>
       </div>
     </div>
     <!-- End main site content -->
 
-  <footer>
+    <footer>
       <div id="heading">
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
