--- a/work/gospel/index.html
+++ b/work/gospel/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Symphony</title>
+    <title>Chris Lee | The Gospel</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,25 +22,37 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Symphony</h1>
-          <p class="type">Web App</p>
+          <h1>The Gospel</h1>
+          <p class="type">Website</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Symphony" class="bleed window" style="margin-right: -300px; width: 700px">
-          <p>Discovering new music should be easy.</p>
-          <p>Tell <strong>Symphony</strong> about a musician you like and it'll suggest others. I worked on Symphony for the 24-hour <a href="http://developer.yahoo.com/hacku/" target="_blank">Yahoo! Hack U</a> 2009 hackathon. Symphony was both my first ever web app project, and it ignited my interest in web development. It was also a solo project, so it presented many challenges and lessons.</p>
+          <a href="http://chrsl.net/gospel/" title="The Gospel">
+            <img src="0.png" class="bleed window" style="margin-right: -360px" alt="The Gospel">
+          </a>
+          <p>The <strong>gospel</strong>, or &ldquo;good news&rdquo;, is the message of God through Jesus Christ that makes up the Christian faith.</p>
+          <p>As a Christian, I see this message as of utmost importance. My hope with my attempt here was to use my techical knowledge and design intuition to produce something that clearly, briefly, and beautifully communicates the good news.</p>
           <h2>Technology</h2>
-          <p>Symphony uses the <a href="http://www.last.fm" target="_blank">last.fm</a> API to gather data about related artists. Working on Symphony was my first time using JavaScript and jQuery, and I learned the basics on the spot for the hackathon.</p>
+          <p>The site, designed to use a single page, makes use of some interesting design techniques:</p>
+          <ul>
+            <li>The <a href="http://en.wikipedia.org/wiki/Parallax_scrolling" target="_blank">parallax scrolling</a> technique moves the background images at a different speed than the rest of the site's content while scrolling to simulate 3D</li>
+            <li>CSS3's <code>background-size</code> property allows backgrounds images to intelligently resize to cover entire sections. This looks nice with background images based on classic biblical woodcut illustrations.</li>
+            <li>The <a href="http://www.zachleat.com/web/bigtext-makes-text-big/" target="_blank">BigText</a> jQuery plugin makes section headers sized to take up the whole width, a technique common in print design but rarely used in web design</li>
+            <li>CSS3 animation is used to fade an indicator in when hovering over Bible passages.</li>
+            <li>Relevant songs are inserted into each section, powered by <a href="http://www.spotify.com/" target="_blank">Spotify</a>.</li>
+          </ul>
           <h2>Design</h2>
-          <p>Symphony presents musicians in a tiled photo view. Clicking on a tile opens more detailed information about the musician in a modal windows. This information includes a biography and larger image. I also originally intended to display information like YouTube videos and Flickr photos but ran out of time.</p>
+          <p>I toyed with the idea of creating a traditional, multi-page website, but decided to consolidate the site into a single, scrollable page. This design encourages the reader to view the content in order, telling the story.</p>
+          <p>Although the content was certainly the focus of the page, I wanted it to be visually attractive. I also wanted to clearly distinguish between the main sections of the page, which represent large, distinct periods of time in history. I took the idea of using different colors for the background from the <a href="http://en.wikipedia.org/wiki/Wordless_Book" target="_blank">Wordless Book</a>, a Christian evangelistic tool, and modified the color scheme to look more aesthetically pleasing and convey more meaning.</p>
+          <p>I wasn't satisfied with solid colors for the background, though, so I attempted to look for some classical Bible art (something I'm rather fond of) to blend into them. I stumbled upon a wonderful, public domain gallery of art Bible illustrations by <a href="http://catholic-resources.org/Art/Dore.htm">Gustave Dor&eacute;</a> and fell in love with it.</p>
           <h2>Roles</h2>
           <div id="roles">
             <div class="role design">Ideation &amp; vision</div>
             <div class="role design">Visual design</div>
             <div class="role design">Interaction design</div>
+            <div class="role writing">Content</div>
             <div class="role programming">Front-end development</div>
-            <div class="role programming">Back-end development</div>
           </div>
+          <a href="http://chrsl.net/gospel/" class="deliverable" target="_blank">Visit the site</a>
         </div>
       </div>
     </div>
@@ -51,7 +63,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
