--- a/work/shelf/index.html
+++ b/work/shelf/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Human-Computer Interaction Institute</title>
+    <title>Chris Lee | Shelf</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,22 +22,33 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>HCI Institute</h1>
-          <p class="type">Website</p>
+          <h1>Shelf</h1>
+          <p class="type">Web App</p>
         </div>
         <div id="description">
-          <a href="prototype/index.html" title="Human-Computer Interaction Institute">
-            <img src="0.png" alt="Human-Computer Interaction Institute" class="bleed window" style="margin-right: -140px; width: 500px">
-          </a>
-          <p>Carnegie Mellon University's program in human-computer interaction is top-ranked.</p>
-          <p>When Carnegie Mellon's Human-Computer Interaction Institute organized a <a href="http://www.hcii.cmu.edu/news/stories/redesign-hcii-website-1300-prizes" target="_blank">website redesign contest</a> in 2011, I took a shot at it. Due to a busy class schedule, I ended up working on my entry last-minute within the span of a couple days. The entry didn't end up winning the contest, but designing it was a fun experience.</p>
+          <img src="0.png" alt="Shelf" class="bleed window" style="margin-right: -340px">
+          <p>What do possessions say about a person?</p>
+          <p>That's the question we explored with <strong>Shelf</strong>, a social network based around the products that people love. The goals of Shelf were as follows:</p>
+          <ul>
+            <li><strong>Build communities based on product interests:</strong> Products offer a common ground for people who would otherwise be strangers to interact on a level that is engaging and yet not intrusive.</li>
+            <li><strong>Supply relevant information about products that extends beyond technical specifications:</strong> For shoppers, some of the most useful information about potential purchases is based on personal experiences, not technical details.</li>
+            <li><strong>Keep track and showcase product progression:</strong> Walking through someone's bedroom and seeing their favorite things tells a lot about a person, and this experience can be mirrored in digital form.</li>
+          </ul>
+          <p>We designed Shelf to work as an engaging community by targeting two main user groups:</p>
+          <ul>
+            <li><strong>Enthusiasts:</strong> Product lovers wanting to discuss new releases and how they use their products</li>
+            <li><strong>Smart shoppers:</strong> People seeking information about potential purchases</li>
+          </ul>
+          <h2>Process</h2>
+          <p>The process involved multiple ideation sessions, user interviews and affinity diagramming, paper wireframing, digital wireframing, and development of a prototype. Though I was involved with each stage, my primary contribution was the final prototype, built in HTML and CSS.</p>
+          <h2>Team</h2>
+          <p>Prerna Singh, Nina Xu, <a href="http://www.jameszulkie.com/" target="_blank">James Zulkie</a></p>
           <h2>Roles</h2>
           <div id="roles">
-            <div class="role design">Visual design</div>
+            <div class="role design">Ideation &amp; vision</div>
             <div class="role programming">Front-end development</div>
           </div>
-          <a href="design.pdf" class="deliverable">View the design document</a>
-          <a href="prototype/index.html" class="deliverable">View the prototype</a>
+          <a href="presentation.pdf" class="deliverable">View the presentation</a>
         </div>
       </div>
     </div>
@@ -48,7 +59,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
