--- a/work/snappy/index.html
+++ b/work/snappy/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Shelf</title>
+    <title>Chris Lee</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,33 +22,29 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Shelf</h1>
+          <h1>Snappy</h1>
           <p class="type">Web App</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Shelf" class="bleed window" style="margin-right: -340px">
-          <p>What do possessions say about a person?</p>
-          <p>That's the question we explored with <strong>Shelf</strong>, a social network based around the products that people love. The goals of Shelf were as follows:</p>
-          <ul>
-            <li><strong>Build communities based on product interests:</strong> Products offer a common ground for people who would otherwise be strangers to interact on a level that is engaging and yet not intrusive.</li>
-            <li><strong>Supply relevant information about products that extends beyond technical specifications:</strong> For shoppers, some of the most useful information about potential purchases is based on personal experiences, not technical details.</li>
-            <li><strong>Keep track and showcase product progression:</strong> Walking through someone's bedroom and seeing their favorite things tells a lot about a person, and this experience can be mirrored in digital form.</li>
+          <img src="0.png" alt="Snappy" class="bleed window" style="margin-right: -340px">
+          <p>Retro camera effects are hip. HTML5 is hip. So we combined them.</p>
+          <p>Apps like <a href="https://instagram.com/">Instagram</a> have repopularized classic camera effects, but these apps are typically limited to closed platforms like iOS and Android. So when the <a href="http://mozappshackday.eventbrite.com/" target="_blank">Mozilla Apps Hack Day 2012</a> challenged us to build open, cross-platforms web apps, a couple other Mozilla interns and I decided to build an <strong>Snappy</strong>, Instagram-inspired app. My teammates handled the graphics editing algorithms while I worked on the design and front-end of the app. We ended up completing the app in five hours and winning first place.</p>
+          <h2>Design</h2>
+          <p>Off the bat, I wanted to use arrange the photo-editing process as a few distinct steps to convey its simplicity. The layout went through many iterations, finally arriving at a main content area with a sidebar displaying the steps. The sidebar's color changes with each step to further demonstrate progress.</p>
+          <p>Fitting with the nature of a hackathon, I had to work around various technical limitations as they came up. For example, though we initially wanted to show each effect's result with a thumbnail preview, that feature ended up being infeasible, performance-wise, so I used a text-based list of tabs attached to the photo instead.</p>
+          <h2>Technology</h2>
+          <p>Snappy is a simple, client-side JavaScript app. I contributed to the code for front-end interactions, setting up events to trigger when the buttons were pressed or when the app moved to the next step.</p>
+          <p>During the hackathon, we didn't concentrate on code style much, so our code became one huge mess. After the fact, I organized and modularized it a bit. The code is <a href="https://github.com/cleercode/snappy" target="_blank">on GitHub</a>.</p>
           </ul>
-          <p>We designed Shelf to work as an engaging community by targeting two main user groups:</p>
-          <ul>
-            <li><strong>Enthusiasts:</strong> Product lovers wanting to discuss new releases and how they use their products</li>
-            <li><strong>Smart shoppers:</strong> People seeking information about potential purchases</li>
-          </ul>
-          <h2>Process</h2>
-          <p>The process involved multiple ideation sessions, user interviews and affinity diagramming, paper wireframing, digital wireframing, and development of a prototype. Though I was involved with each stage, my primary contribution was the final prototype, built in HTML and CSS.</p>
           <h2>Team</h2>
-          <p>Prerna Singh, Nina Xu, <a href="http://www.jameszulkie.com/" target="_blank">James Zulkie</a></p>
+          <p><a href="http://paul.cx/" target="_blank">Paul Adenot</a>, Stephen Crane</p>
           <h2>Roles</h2>
           <div id="roles">
-            <div class="role design">Ideation &amp; vision</div>
+            <div class="role design">Visual design</div>
+            <div class="role design">Interaction design</div>
             <div class="role programming">Front-end development</div>
           </div>
-          <a href="presentation.pdf" class="deliverable">View the presentation</a>
+          <a href="https://github.com/cleercode/snappy" class="deliverable" target="_blank">Browse the source</a>
         </div>
       </div>
     </div>
@@ -59,7 +55,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
