--- a/work/stik/index.html
+++ b/work/stik/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Tripi</title>
+    <title>Chris Lee | Stik</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,26 +22,28 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Tripi</h1>
+          <h1>Stik</h1>
           <p class="type">Web App</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Tripi " class="bleed window" style="margin-right: -80px; width: 500px;">
-          <p>Planning a trip can be hectic.</p>
-          <p>Going to a new place for a vacation or business trip? Unless you've done your research or know people who've been there, finding out where to go can be tricky. Organizing your ideas and constructing an itinerary can be equally difficult. <strong>Tripi</strong> is designed to solve these problems, simplifying travel planning.</p>
-          <p>I worked on Tripi for the 24-hour <a href="http://developer.yahoo.com/hacku/" target="_blank">Yahoo! Hack U</a> 2011 hackathon. In 24 hours, three other students (techical students/developers) and I devised and built this travel itinerary planner. I worked all around the project on front-end and back-end development, logo and user interface design, project vision, and team management.</p>
-          <p>Centered around simplicity and automation, Tripi provides useful metadata for destinations and suggesting relevant nearby places as the user completes their itinerary.</p>
-          <h2>Team</h2>
-          <p><a href="http://thejeffcooper.com/" target="_blank">Jeff Cooper</a>, Prasanth Somusandar, Vinay Vemuri</p>
+          <img src="0.png" alt="Stik" class="bleed window" style="margin-right: -300px;">
+          <p>Where do you go when you need a lawyer? Real estate agent? Mortgage broker?</p>
+          <p>What you may not realize is that plenty of these service providers might be in your local friend group: friends or friends of friends. <strong>Stik</strong> aims to surface these relations by leveraging the Facebook network.</p>
+          <p>I interned at Stik during the summer after my freshman year of college, working on front-end development and interface design. The company at that point consisted of three other employees and another intern. It was my first professional job and also my first experience at a startup, and gave me my passion for entrepreneurship. It's also where I learned a lot of the front-end development skills like JavaScript that I now use regularly. As the only designer on the small team, I worked a ton and gained a lot of experience and fond memories.</p>
+          <h2>Design</h2>
+          <p>When I joined the Stik team, the website looked dated and used an inconsistent color scheme which failed to establish a solid identity for the company. After initially working with a freelance designer to communicate our goals in a site-wide redesign, I took ownership of the redesign project and heavily revised her ideas into something new. We decided to base our color scheme around blue to imply our modern yet reliable system and use of the Facebook network.</p>
+          <p>I also designed a new logo for Stik, playing with typography and negative space to show the outline of a suited businessman. Along with a base typeface choice of Gotham Bold, this image was meant to evoke professionalism yet playfulness.</p>
+          <h2>Technology</h2>
+          <p>Stik works on PHP and JavaScript, and the internship being my first exposure to web development beyond HTML and CSS. At first, the internship required a lot of requesting help to make sense of code. After a while, I was able to effectively transfer my interface mockups into markup and then program their interactive functionality.</p>
+          <p>Since Stik relies on the Facebook network, I spent a good deal of time interacting with the Facebook API.</p>
           <h2>Roles</h2>
           <div id="roles">
-            <div class="role design">Ideation &amp; vision</div>
-            <div class="role management">Project management</div>
             <div class="role design">Visual design</div>
             <div class="role design">Interaction design</div>
             <div class="role programming">Front-end development</div>
             <div class="role programming">Back-end development</div>
           </div>
+          <a href="http://www.stik.com/" class="deliverable" target="_blank">Visit the site</a>
         </div>
       </div>
     </div>
@@ -52,7 +54,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
