--- a/work/tripi/index.html
+++ b/work/tripi/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Design for Programmers</title>
+    <title>Chris Lee | Tripi</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,33 +22,37 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Design for Programmers</h1>
-          <p class="type">Presentation</p>
+          <h1>Tripi</h1>
+          <p class="type">Web App</p>
         </div>
         <div id="description">
-          <div class="hero">
-            <script async class="speakerdeck-embed" data-id="4f2df9465fd7de001f008eae" data-ratio="1.3333333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-          </div>
-          <p>Who says programmers can't design?</p>
-          <p>In the week leading up to the <a href="http://www.tartanhacks.com/">TartanHacks</a> hackathon at Carnegie Mellon, I delivered this presentation introducing web design concepts to an audience of hackathon participants, primarily computer science students.</p>
-          <p>Both the visuals and the content of the presentation were made from scratch and reflect some of the important lessons I've learned in the past years as I've explored the world of design.</p>
+          <img src="0.png" alt="Tripi " class="bleed window" style="margin-right: -80px; width: 500px;">
+          <p>Planning a trip can be hectic.</p>
+          <p>Going to a new place for a vacation or business trip? Unless you've done your research or know people who've been there, finding out where to go can be tricky. Organizing your ideas and constructing an itinerary can be equally difficult. <strong>Tripi</strong> is designed to solve these problems, simplifying travel planning.</p>
+          <p>I worked on Tripi for the 24-hour <a href="http://developer.yahoo.com/hacku/" target="_blank">Yahoo! Hack U</a> 2011 hackathon. In 24 hours, three other students (techical students/developers) and I devised and built this travel itinerary planner. I worked all around the project on front-end and back-end development, logo and user interface design, project vision, and team management.</p>
+          <p>Centered around simplicity and automation, Tripi provides useful metadata for destinations and suggesting relevant nearby places as the user completes their itinerary.</p>
+          <h2>Team</h2>
+          <p><a href="http://thejeffcooper.com/" target="_blank">Jeff Cooper</a>, Prasanth Somusandar, Vinay Vemuri</p>
           <h2>Roles</h2>
           <div id="roles">
+            <div class="role design">Ideation &amp; vision</div>
+            <div class="role management">Project management</div>
             <div class="role design">Visual design</div>
-            <div class="role writing">Content</div>
+            <div class="role design">Interaction design</div>
+            <div class="role programming">Front-end development</div>
+            <div class="role programming">Back-end development</div>
           </div>
-          <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="deliverable" target="_blank">View the presentation</a>
         </div>
       </div>
     </div>
     <!-- End main site content -->
 
-    <footer>
+  <footer>
       <div id="heading">
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
