--- a/work/vote4/index.html
+++ b/work/vote4/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Asian Christian Fellowship</title>
+    <title>Chris Lee | Vote 4</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,27 +22,27 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Asian Christian Fellowship</h1>
-          <p class="type">Website</p>
+          <h1>Vote 4</h1>
+          <p class="type">Mobile</p>
         </div>
         <div id="description">
-          <a href="http://acfpcc.org/" title="Asian Christian Fellowship">
-            <img src="0.png" class="bleed window" alt="Asian Christian Fellowship" style="margin-right: -220px; width: 500px;">
-          </a>
-          <p>Asian Christian Fellowship is a student organization at Carnegie Mellon University.</p>
-          <p>This site was designed as a hub for the organization, where newcomers can find out more information about it and members can read about upcoming events.</p>
-
-          <h2>Technology</h2>
-          <p>The site uses CSS3 and web fonts to a great degree, with minimal images. I also constructed a Tumblr blog theme for the announcements page to match the static content.</p>
-
-          <h2>Process</h2>
-          <p>With the exception of some minor polishing, the entire design and code process took a day. I spent the day passing iterations back and forth with the fellowship director, who wrote the content for the site.</p>
+          <img src="0.png" alt="Vote 4 poll screen" class="bleed">
+          <p>Ever had trouble deciding where to eat with your friends?</p>
+          <p><strong>Vote 4</strong> is a mobile app concept designed to solve that problem. Inspired by my indecisive group of friends, I worked on Vote 4 with a couple classmates for an mobile interaction design project. Our target demographic was groups of teenagers and young adults who have trouble picking eating destinations due to differing tastes or lack of strong opinions.</p>
+          <h2>Research</h2>
+          <p>We consulted similar such Yelp, Urbanspoon, and Foodspotting and found that while helpful for a single user trying to find a restaurant, they did not solve the <strong>group coordination</strong> problem that we were targetting.</p>
+          <h2>Design</h2>
+          <p>I suggested the use of a four photo tiles as the main screen to make the app feel simple yet visually engaging from the start. I led a whiteboard wireframe construction session based on this idea and then refined the results into paper wireframes, then digital wireframes, and finally digital mockups produced in Photoshop. We then used Keynote to construct an animated demo.</p>
+          <h2>Team</h2>
+          <p><a href="http://christianreyes.com/" target="_blank">Christian Reyes</a>, Stephanie Yim</p>
           <h2>Roles</h2>
           <div id="roles">
+            <div class="role design">Ideation</div>
+            <div class="role research">User research</div>
             <div class="role design">Visual design</div>
-            <div class="role programming">Front-end development</div>
+            <div class="role design">Interaction design</div>
           </div>
-          <a href="http://acfpcc.org/" class="deliverable">Visit the site</a>
+          <a href="presentation.pdf" class="deliverable" target="_blank">View the presentation</a>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
