--- a/work/waypoint/index.html
+++ b/work/waypoint/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="Interaction designer" name="description">
-    <title>Chris Lee | Bonsai</title>
+    <title>Chris Lee | Waypoint</title>
     <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold|Roboto:regular,bold" rel="stylesheet" type="text/css" />
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,32 +22,28 @@
     <div id="content">
       <div id="detail">
         <div class="heading">
-          <h1>Bonsai</h1>
-          <p class="type">Web App</p>
+          <h1>Waypoint</h1>
+          <p class="type">Device</p>
         </div>
         <div id="description">
-          <img src="0.png" alt="Bonsai" class="bleed window" style="margin-right: -240px">
-          <p>There are so many to-do list applications these days, but I haven't found one that really suits me.</p>
-          <p>My dream to-do list application has:</p>
-          <ul>
-            <li>Complete keyboard accessibility</li>
-            <li>Some sort of grouping functionality, allowing multiple separate lists</li>
-            <li>Due date support with smart interpretation of date strings ("Fri", "tom", "5/27", etc.) and sub-groups based around date ranges</li>
-            <li>Accessibility across devices</li>
-            <li>A simple, minimal interface that includes these things and not much else</li>
-          </ul>
-          <p>I found the first three points (especially keyboard support!) pretty well-supported in <a href="http://www.potionfactory.com/thehitlist/" target="_blank">The Hit List</a>, the closest I've found to my ideal to-do list. But besides being costly, it's still overkill for my use. So I built my own to-do list as a web application.</p>
-          <h2>Technology</h2>
-          <p>Bonsai was built with <a href="http://backbonejs.org/" target="_blank">Backbone.js</a>, which allows task data to be easily bonded to the elements displayed on the page. I also took advantage of <a href="http://www.datejs.com/" target="_blank">Datejs</a>, a JavaScript libary for interpreting date strings.</p>
-          </ul>
+          <iframe class="hero video" src="http://player.vimeo.com/video/47074512?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="860" height="430" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <p>What if maps were smarter?</p>
+          <p>One of the small details I love about the Harry Potter universe is a magical map of school grounds called the Marauder's Map that shows people's whereabouts. As far as I can tell, with GPS-enabled smartphones becoming increasingly popular, there's no reason why this idea has to remain magic.</p>
+          <p>That's how I came up with the idea for <strong>Waypoint</strong>, a large map displaying a university campus and the anonymous locations of students. Waypoint displays can be mounted at popular public locations around the campus. Students may opt into downloading a simple smartphone application to display their location on these maps.</p>
+          <h2>Challenge</h2>
+          <p>The difference between Harry Potter's Marauder's Map and Waypoint is that the Marauder's Map is easily abused for mischief, while Waypoint aims to be fun and helpful, not harmful. The main challenge of Waypoint, therefore, was to take advantage of powerful modern technology without violating privacy. We addressed privacy concerns by making Waypoint a completely anonymous and opt-in product.</p>
+          <h2>Process</h2>
+          <p>Waypoint was originally conceived as a fun visualization of the college campus, but my team quickly realized that we could use the form factor for additional features like displaying events or walking directions. We developed several feature concepts and gathered feedback from other students about both features and privacy concerns.</p>
+          <h2>Feasability</h2>
+          <p>Waypoint was designed as a somewhat future-minded concept. The main limitations for implementing a system like Waypoint are simply further ubiquity of GPS-enabled smartphones and improved battery on these devices given frequent data access.</p>
+          <h2>Team</h2>
+          <p>Michelle Lee, Elizabeth Li, <a href="http://www.byxia.com/" target="_blank">Bingying Xia</a></p>
           <h2>Roles</h2>
           <div id="roles">
             <div class="role design">Ideation &amp; vision</div>
-            <div class="role design">Visual design</div>
             <div class="role design">Interaction design</div>
-            <div class="role programming">Front-end development</div>
-            <div class="role programming">Back-end development</div>
           </div>
+          <a href="presentation.pdf" class="deliverable">View the presentation</a>
         </div>
       </div>
     </div>
@@ -58,7 +54,7 @@
         <h1>About Me</h1>
       </div>
       <div id="info">
-        <img src="../photo.jpg" alt="Chris Lee">
+        <img src="/photo.jpg" alt="Chris Lee">
         <div id="description">
           <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
           <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
