--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="designforprogrammers/" class="info"><div class="icon"></div>Info</a>
+              <a href="/work/designforprogrammers/" class="info"><div class="icon"></div>Info</a>
               <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
