Snappy live link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <div class="cover">
             <div class="buttons">
               <a href="/work/snappy/" class="info"><div class="icon"></div>Info</a>
+              <a href="http://chrsl.net/snappy/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
           <div class="heading">
