--- a/work/snappy/index.html
+++ b/work/snappy/index.html
@@ -44,6 +44,7 @@
             <div class="role design">Interaction design</div>
             <div class="role programming">Front-end development</div>
           </div>
+          <a href="http://chrsl.net/snappy/" class="deliverable" target="_blank">Visit the site</a>
           <a href="https://github.com/cleercode/snappy" class="deliverable" target="_blank">Browse the source</a>
         </div>
       </div>
