Different language for web app deliverable buttons

--- a/work/coursel/index.html
+++ b/work/coursel/index.html
@@ -54,7 +54,7 @@
             <div class="role programming">Front-end development</div>
             <div class="role programming">Back-end development</div>
           </div>
-          <a href="http://coursel.net/" class="deliverable" target="_blank">Visit the site</a>
+          <a href="http://coursel.net/" class="deliverable" target="_blank">Try the app</a>
           <a href="https://github.com/cleercode/coursel" class="deliverable" target="_blank">Browse the source</a>
         </div>
       </div>
